chore: 프로젝트 구조 설계 - layout 파일 및 필수 activity 생성 - 프로젝트 구조 설계

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,6 @@
 
     <!-- 프로필 -->
     <string name="myprofile">마이프로필</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
