ui: main navigation 추가
- main navigation 추가
   - profile을 제외한 나머지 fragment 동작 구현
- 전체 코드 reformatting

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,11 @@
 
     <!-- 프로필 -->
     <string name="myprofile">마이프로필</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!--fragment tag-->
+    <string name="fragment_home">HomeFragment</string>
+    <string name="fragment_board">BoardFragment</string>
+    <string name="fragment_battle">BattleFragment</string>
+    <string name="fragment_chart">ChartFragment</string>
+    <string name="fragment_profile">ProfileFragment</string>
 </resources>
