ui: battle 화면의 실 내용 구성
- 실제 fragment 내용을 추가함
- tablayout 동작 등

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,6 @@
     <string name="fragment_battle">BattleFragment</string>
     <string name="fragment_chart">ChartFragment</string>
     <string name="fragment_profile">ProfileFragment</string>
+    <string name="fragment_battle_join">BattleJoinFragment</string>
+    <string name="fragment_club_join">ClubJoinFragment</string>
 </resources>
